GG-49445 Remove dead pre-JDK-17 version handling